size control added

--- a/index.html
+++ b/index.html
@@ -22,12 +22,21 @@
       <div class="circle red"><input type="color" class="change-color"></div>
       <div class="circle green"><input type="color" class="change-color"></div>
       <div class="circle blue"><input type="color" class="change-color"></div>
-      <div class="circle yellow"><input type="color" class="change-color"></div>
+      <div class="circle yellow"><input type="color" class="change-color"></div>å
     </main>
     <div class="light-controls">
       <div class="control-section control-section-btn">
         <button type="button" class="on btn">ON</button>
         <button type="button" class="off btn">OFF</button>
+      </div>
+      <div class="switch-container">
+        <label for="switcher">Change Color</label>
+        <button type="button" name="switcher" class="switcher-container btn"><span class="switcher"></span></button>
+        <label for="switcher">Change Size</label>
+      </div>
+      <div class="range-container" >
+        <span>Press the light circle to change size</span>
+        <input type="range" class="size-input">
       </div>
       <div class="control-section">
         <label for="speed-control" class="control-label">Speed: </label></br>
@@ -57,7 +66,7 @@
           <button type="button" class="btn row">RUN</button>
         </div>
       </div>
-      <div class="control-section">
+      <!-- <div class="control-section">
         <label for="intensity" class="control-label">Intensity: </label></br>
         <div class="input-btn-container">
           <input
@@ -70,7 +79,7 @@
           />
           <button type="button" class="btn intenisty">RUN</button>
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
